--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="navbar">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Fitness Calculator</a></li>
+                <li><a href="cal.html">Fitness Calculator</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
 
